@@ -30,7 +30,7 @@
             <p>
                 <?php _vzm("Please acknowledge you agree with our privacy statement by ticking the following box.") ?></br>
                 <?php $href = '<a href="' . $net->staticPage('privacy') . '">' . _zm("here") . '</a>'; ?>
-                <?php _vzm("The privacy statement can be read %s.", $href) ?><p>
+                <?php _vzm("The privacy statement can be read %s.", $href) ?></p>
             <p><input type="checkbox" id="privacy" name="privacy" value="1" /><label for="privacy"><?php _vzm("I have read and agreed to your privacy statement.") ?></label></p>
         </fieldset>
     <?php } ?>
