@@ -161,6 +161,7 @@ Release 0.9.10
 - add ZMCoupons::getCoupons() method
 - add generic yaml based ZMLocale implementation - ZMYamlLocale
 - dropped Creole
+- add optional T&C checkout checkbox/message
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
